# Movie-Recommendation-System

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt  tox.ini
notebooks/: content_based_recommendation.ipynb  hybrid_model.ipynb  movie_similarity_based_recs.ipynb  preprocessing.ipynb
