[tool.poetry]
name = "movie-recs"
version = "0.1.0"
description = ""
authors = ["Yuki Okuda <y.okuda@dr-ubie.com>"]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.17.4"
fastapi = "^0.73.0"
pydantic = "^1.9.0"
requests = "2.32.3"
anyio = "3.0.0"
appnope = "0.1.4"
asttokens = "3.0.0"
backcall = "0.2.0"
backports-tarfile = "1.2.0"
black = "22.1.0"
build = "1.2.2.post1"
cachecontrol = "0.14.2"
certifi = "2025.4.26"
cffi = "1.17.1"
charset-normalizer = "3.4.1"
cleo = "2.1.0"
click = "8.1.8"
comm = "0.2.2"
contourpy = "1.3.2"
crashtest = "0.4.1"
cycler = "0.12.1"
debugpy = "1.8.14"
decorator = "5.2.1"
distlib = "0.3.9"
dulwich = "0.22.8"
executing = "2.2.0"
fastjsonschema = "2.21.1"
filelock = "3.18.0"
findpython = "0.6.3"
fonttools = "4.57.0"
h11 = "0.16.0"
httpcore = "1.0.9"
httpx = "0.28.1"
idna = "3.10"
importlib-metadata = "8.7.0"
installer = "0.7.0"
ipykernel = "6.29.5"
ipython = "8.0.1"
ipython-pygments-lexers = "1.1.1"
jaraco-classes = "3.4.0"
jaraco-context = "6.0.1"
jaraco-functools = "4.1.0"
jedi = "0.19.2"
joblib = "1.4.2"
jupyter-client = "8.6.3"
jupyter-core = "5.7.2"
keyring = "25.6.0"
kiwisolver = "1.4.8"
matplotlib = "3.10.1"
matplotlib-inline = "0.1.7"
more-itertools = "10.7.0"
msgpack = "1.1.0"
mypy-extensions = "1.1.0"
nest-asyncio = "1.6.0"
numpy = "1.26.4"
packaging = "25.0"
pandas = "2.2.3"
parso = "0.8.4"
pathspec = "0.12.1"
pbs-installer = "2025.4.9"
pexpect = "4.9.0"
pickleshare = "0.7.5"
pillow = "11.2.1"
pkginfo = "1.12.1.2"
platformdirs = "4.3.7"
poetry = "2.1.2"
poetry-core = "2.1.2"
prompt-toolkit = "3.0.51"
psutil = "7.0.0"
ptyprocess = "0.7.0"
pure-eval = "0.2.3"
pycparser = "2.22"
pygments = "2.19.1"
pyparsing = "3.2.3"
pyproject-hooks = "1.2.0"
python-dateutil = "2.9.0.post0"
pytz = "2025.2"
pyzmq = "26.4.0"
rapidfuzz = "3.13.0"
requests-toolbelt = "1.0.0"
scikit-learn = "1.6.1"
scikit-surprise = "1.1.4"
scipy = "1.15.2"
shellingham = "1.5.4"
six = "1.17.0"
sniffio = "1.3.1"
stack-data = "0.6.3"
surprise = "0.1"
threadpoolctl = "3.6.0"
tomlkit = "0.13.2"
tornado = "6.4.2"
traitlets = "5.14.3"
trove-classifiers = "2025.4.28.22"
typing-extensions = "4.13.2"
tzdata = "2025.2"
urllib3 = "2.4.0"
virtualenv = "20.30.0"
wcwidth = "0.2.13"
xattr = "1.1.4"
zipp = "3.21.0"
zstandard = "0.23.0"

[tool.poetry.dev-dependencies]
ipython = "^8.0.1"
ipdb = "^0.13.9"
flake8 = "^4.0.1"
black = "^22.1.0"
isort = "^5.10.1"
pytest = "^7.0.1"
tox = "^3.24.5"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "hug"
line_length = 120
src_paths = ["app", "tests"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
